[Java] Workaround for https://github.com/gradle/gradle/issues/15538.